# hacks-ai-2023-spb

./: .gitignore  .xdp-pt5l.png-34irTJ  README.md  config_example.toml  sample.txt
backend/: pyproject.toml
backend/backend/: celery.py  permissions.py  settings.py  urls.py
backend/backend/api/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/backend/api/migrations/: 0001_initial.py  0002_alter_result_logo_status_alter_result_name_status_and_more.py  0003_alter_result_logo_status_alter_result_name_status_and_more.py  0004_alter_presentation_checko_url.py
backend/backend/authentication/: apps.py  manager.py  models.py  serializers.py  utils.py  views.py
backend/backend/authentication/migrations/: 0001_initial.py  0002_user_is_admin.py
backend/backend/presentations/: generation.py
backend/media/: presentation-102.pptx  presentation-103.pptx  presentation-104.pptx  presentation-69.pptx  presentation-70.pptx  presentation-71.pptx  presentation-72.pptx  presentation-73.pptx  presentation-74.pptx  presentation-75.pptx  presentation-77.pptx  presentation-78.pptx  presentation-79.pptx  presentation-80.pptx  presentation-89.pptx
backend/output/: index.html
backend/output/_nuxt/: archive.65aaadea.js  archive.ace17f1c.css  archive.cf8910e3.js  entry.0ee6e2dd.js  entry.5b42567c.css  entry.fdd6433d.js  error-404.7cae4099.js  error-404.8ba90600.js  error-500.6fa8192d.js  error-500.de77e5f5.js  generate.4c3cdcfc.js  generate.d49d9113.js  generate.f75858f0.css  index.1e8dd105.js  index.307846ac.css  index.35f71cd1.js  index.874e7c8a.css
backend/output/generate/: index.html
backend/sandbox/: .~lock.presentation.pptx#  presentation.pptx  sandbox.ipynb  test_presentation.pptx
client/: app.vue  d.env.ts  formkit.config.ts  nuxt.config.ts  package-lock.json  package.json
client/api/: index.ts
client/components/: LoadingScreen.vue  MainFooter.vue  MainMenu.vue  MainNavbar.vue  PresentationCard.vue  PresentationGenCard.vue  TelegramLoginWidget.vue  UserIcon.vue
client/pages/: archive.vue  generate.vue  index.vue
models/: logo_generate_gradio.ipynb  requirements.txt  text_generate_gradio.ipynb  text_generate_metric.ipynb
resources/: Рынок. TAM - SAM - SOM.docx
(+12 files in other folders)
